--- a/index.html
+++ b/index.html
@@ -1,3 +1,65 @@
-ID	CUSTOMER	KATEGORI	MERK	SISTEM	MULAI	AKHIR	DURASI
-123	ARICANTI	HEMATOLOGI	MITIC	KSO	2022	2023	1 TAHUN
-456	KSIH IBU	HEMATOLOGI	MITIC	KSO	2022	2023	2 TAHUN
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <!-- Bootstrap CSS and JS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .iframe-container {
+            width: 100%;
+            padding-top: 56.25%; /* 16:9 Aspect Ratio */
+            position: relative;
+            margin-top: 56px; /* Height of navbar */
+        }
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+        /* Remove container padding for mobile */
+        @media (max-width: 768px) {
+            .container-fluid {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            .iframe-container {
+                margin-top: 56px;
+                padding-top: 150%; /* More vertical space for mobile */
+            }
+        }
+    </style>
+</head>
+<body>
+    <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">PT. CIM</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+        </div>
+    </header>
+    
+    <div class="container-fluid">
+        <div class="iframe-container">
+            <iframe src="https://script.google.com/macros/s/AKfycbznXSyEA0AdVt_-6-oQwwVl02tZfyBBgK14lVZ2OPyhlu6D0MrhTowNTYk8-assOZ3w/exec?embedded=true"></iframe>
+        </div>
+    </div>
+</body>
+</html>
