--- a/index.html
+++ b/index.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <!-- Bootstrap CSS and JS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Preload Bootstrap CSS -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"></noscript>
+    <!-- Preconnect to CDN for faster loading -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <style>
+        /* Critical CSS - loaded first */
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: #f8f9fa;
             margin: 0;
             padding: 0;
+            background-color: #f8f9fa;
         }
         header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
             background-color: #fff;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            z-index: 1000;
+            height: 56px;
         }
         .iframe-container {
             width: 100%;
@@ -32,24 +41,63 @@
             height: 100%;
             border: none;
         }
-        /* Remove container padding for mobile */
+        
+        /* Non-critical CSS */
         @media (max-width: 768px) {
             .container-fluid {
                 padding-left: 0;
                 padding-right: 0;
             }
             .iframe-container {
-                margin-top: 56px;
-                padding-top: 150%; /* More vertical space for mobile */
+                padding-top: 150%;
             }
         }
     </style>
+    <!-- Defer non-critical JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>  
+    <!-- Full-width header -->
+    <header>
+        <div class="container-fluid">
+            <!-- Your header content goes here -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Your Logo</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Pricing</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Main content -->
     <div class="container-fluid">
         <div class="iframe-container">
-            <iframe src="https://script.google.com/macros/s/AKfycbwgDS7URPqCPK9z_1tjG1FFYZXAqErjKfTG4HqLfikOQCxdZ89mC2HxHkQkTrMAWb2e/exec?embedded=true"></iframe>
+            <iframe src="https://script.google.com/macros/s/AKfycbwgDS7URPqCPK9z_1tjG1FFYZXAqErjKfTG4HqLfikOQCxdZ89mC2HxHkQkTrMAWb2e/exec?embedded=true" loading="lazy"></iframe>
         </div>
     </div>
+
+    <!-- Load scripts after content -->
+    <script>
+        // Load non-critical resources after page load
+        window.addEventListener('load', function() {
+            // Load any additional scripts here
+        });
+    </script>
 </body>
 </html>
